updated links and videos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 LeafyPod — це інтелектуальний вазон, який автоматизує догляд за рослинами,
                 створюючи ідеальні умови завдяки системі автополиву та датчикам.
             </p>
-            <button class="cta-button" href="#">На Kickstarter</button>
+            <a class="cta-button" href="https://www.kickstarter.com/projects/leafypod/self-watering-smart-planter/description?category_id=Q2F0ZWdvcnktNTI&ref=section-homepage-projectcollection-20-staff-picks-newest">
+                На Kickstarter
+            </a>
         </div>
 
         <div class="hero-image">
@@ -127,9 +129,9 @@
         </div>
 
         <div class="problem-video">
-            <video controls>
+            <video autoplay muted loop>
                 <source
-                    src="assets/video/leafypod_hero.mp4"
+                    src="assets/video/hero-leafypod.mp4"
                     type="video/mp4"
                 />
                 Ваш браузер не підтримує відтворення відео.
@@ -239,9 +241,9 @@
         </div>
 
         <div class="app-video">
-            <video controls>
+            <video autoplay muted loop>
                 <source
-                    src="assets/video/smart_notifications.mp4"
+                    src="assets/video/app_leafypod.mp4"
                     type="video/mp4"
                 />
                 Ваш браузер не підтримує відтворення відео.
