fixed structure html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 <header>
-    <div class="logo">
+    <a href="#" class="logo">
         <img src="assets/img/icons/logo.svg" alt="LeafyPod Logo" />
-    </div>
+    </a>
 
     <nav aria-label="Navigation principale">
         <ul>
@@ -110,22 +110,19 @@
 
             <h3>Як це працює</h3>
 
-            <div class="solution-list">
-                <div class="solution-item">
-                    <span class="number">1</span>
+            <ol class="solution-list">
+                <li class="solution-item">
                     <p>Заповніть резервуар водою</p>
-                </div>
+                </li>
 
-                <div class="solution-item">
-                    <span class="number">2</span>
+                <li class="solution-item">
                     <p>Виберіть режим автополиву</p>
-                </div>
+                </li>
 
-                <div class="solution-item">
-                    <span class="number">3</span>
+                <li class="solution-item">
                     <p>Насолоджуйтесь здоровими рослинами!</p>
-                </div>
-            </div>
+                </li>
+            </ol>
         </div>
 
         <div class="problem-video">
@@ -168,7 +165,9 @@
                     <h3>Регулярні оновлення</h3>
                     <img src="assets/img/icons/cloud.svg" alt="Feature 3" />
                 </div>
-                <p>LeafyPod продовжує працювати завдяки оновленню програм</p>
+                <p>
+                    LeafyPod продовжує працювати завдяки оновленню програм
+                </p>
             </div>
 
             <div class="feature-card">
@@ -189,7 +188,9 @@
                     <h3>Резервуар для води</h3>
                     <img src="assets/img/icons/drop.svg" alt="Feature 5" />
                 </div>
-                <p>Води в резервуарі достатньо приблизно на 4 тижні</p>
+                <p>
+                    Води в резервуарі достатньо приблизно на 4 тижні
+                </p>
             </div>
 
             <div class="feature-card">
@@ -207,38 +208,34 @@
     <section id="mobile-app" class="mobile-app-section">
         <h2>Функції мобільного додатку</h2>
 
-        <div class="app-features-list">
-            <div class="app-feature">
-                <span class="number">1</span>
+        <ol class="app-features-list">
+            <li class="app-feature">
                 <h3>Управління через смартфон</h3>
                 <p>
                     Додаток дозволяє легко контролювати стан рослин і процес поливу прямо з
                     вашого телефону.
                 </p>
-            </div>
+            </li>
 
-            <div class="app-feature">
-                <span class="number">2</span>
+            <li class="app-feature">
                 <h3>Розумні сповіщення</h3>
                 <p>Нагадування, коли рослині треба догляд.</p>
-            </div>
+            </li>
 
-            <div class="app-feature">
-                <span class="number">3</span>
+            <li class="app-feature">
                 <h3>Щотижнева статистика</h3>
                 <p>
                     Прості й зрозумілі звіти про стан рослин для покращення вашого догляду.
                 </p>
-            </div>
+            </li>
 
-            <div class="app-feature">
-                <span class="number">4</span>
+            <li class="app-feature">
                 <h3>Режими поливу</h3>
                 <p>
                     Режими поливу на основі потреб рослини: полив створюється за низької вологості обгрунтовано, а AI оптимізує процес.
                 </p>
-            </div>
-        </div>
+            </li>
+        </ol>
 
         <div class="app-video">
             <video autoplay muted loop>
@@ -255,31 +252,31 @@
         <h2>Що у комплекті?</h2>
 
         <div class="kit-grid">
-            <div class="kit-item">
+            <figure class="kit-item">
                 <img src="assets/img/pod.png" alt="LeafyPod" />
-                <h3>LeafyPod</h3>
-            </div>
+                <figcaption>LeafyPod</figcaption>
+            </figure>
 
             <div class="other-kit-item">
-                <div class="kit-item">
+                <figure class="kit-item">
                     <img src="assets/img/adapter.png" alt="Adapter" />
-                    <h3>Адаптер живлення</h3>
-                </div>
+                    <figcaption>Адаптер живлення</figcaption>
+                </figure>
 
-                <div class="kit-item">
+                <figure class="kit-item">
                     <img src="assets/img/cable.png" alt="Cable" />
-                    <h3>Зарядний кабель</h3>
-                </div>
+                    <figcaption>Зарядний кабель</figcaption>
+                </figure>
 
-                <div class="kit-item">
+                <figure class="kit-item">
                     <img src="assets/img/filter.png" alt="Filter" />
-                    <h3>LeafyPod фільтр</h3>
-                </div>
+                    <figcaption>LeafyPod фільтр</figcaption>
+                </figure>
 
-                <div class="kit-item">
+                <figure class="kit-item">
                     <img src="assets/img/manual.png" alt="Instruction" />
-                    <h3>Інструкція</h3>
-                </div>
+                    <figcaption>Інструкція</figcaption>
+                </figure>
             </div>
         </div>
     </section>
@@ -296,7 +293,7 @@
         <h2>Відгуки</h2>
 
         <div class="testimonials-grid">
-            <div class="testimonial-card">
+            <article class="testimonial-card">
                 <div class="testimonial-header">
                     <img src="assets/img/icons/daryna.svg" alt="Дарина" />
                     <h3>Дарина</h3>
@@ -306,9 +303,9 @@
                     Він самостійно контролює полив, освітлення і температуру, створюючи
                     ідеальні умови.
                 </p>
-            </div>
+            </article>
 
-            <div class="testimonial-card">
+            <article class="testimonial-card">
                 <div class="testimonial-header">
                     <img src="assets/img/icons/arsen.svg" alt="Арсен" />
                     <h3>Арсен</h3>
@@ -317,9 +314,9 @@
                     Це чудово підходить для новачків, які тільки починають доглядати за
                     рослинами та не знають, коли поливати або де краще розмістити рослину.
                 </p>
-            </div>
+            </article>
 
-            <div class="testimonial-card">
+            <article class="testimonial-card">
                 <div class="testimonial-header">
                     <img src="assets/img/icons/soffia.svg" alt="Софія" />
                     <h3>Софія</h3>
@@ -328,7 +325,7 @@
                     Ідеально для тих, хто подорожує і не хоче хвилюватися за стан рослин.
                     Усе необхідне — в одному розумному вазоні.
                 </p>
-            </div>
+            </article>
         </div>
     </section>
 
@@ -343,7 +340,9 @@
 
 <footer id="contact">
     <div class="footer-section footer-left">
-        <img src="assets/img/icons/logo.svg" alt="LeafyPod Logo" />
+        <a href="#" class="logo">
+            <img src="assets/img/icons/logo.svg" alt="LeafyPod Logo" />
+        </a>
         <p class="footer-description">
             Розумний догляд за вашими рослинами — легко і без турбот!
         </p>
