--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>LeafyPod</title>
     <link rel="icon" type="image/svg+xml" href="assets/img/icons/favicon.svg" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
