--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <img src="assets/img/icons/logo.svg" alt="LeafyPod Logo" />
     </a>
 
+    <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+    </button>
+
     <nav aria-label="Navigation principale">
         <ul>
             <li><a href="#features">Про товар</a></li>
@@ -363,16 +369,55 @@
             </ul>
 
             <div class="footer-email">
-                <a href="mailto:info@leafypod.one">info@leafypod.one</a>
+                <a href="/cdn-cgi/l/email-protection#0c65626a634c60696d6a757c636822636269"><span class="__cf_email__" data-cfemail="e78e898188a78b8286819e978883c9888982">[email&#160;protected]</span></a>
             </div>
         </div>
 
         <div class="footer-copyright">
             <p>
-                © 2024 LeafyPod. Усі права захищені.
+       © 2024 LeafyPod. Усі права захищені.
             </p>
         </div>
     </div>
 </footer>
+
+<script>
+// Mobile menu toggle
+const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
+const nav = document.querySelector('nav');
+const body = document.body;
+
+mobileMenuToggle.addEventListener('click', function() {
+    const isExpanded = this.getAttribute('aria-expanded') === 'true';
+    this.setAttribute('aria-expanded', !isExpanded);
+    this.classList.toggle('active');
+    nav.classList.toggle('active');
+    body.classList.toggle('menu-open');
+});
+
+// Close menu when clicking on a link
+const navLinks = document.querySelectorAll('nav a');
+navLinks.forEach(link => {
+    link.addEventListener('click', () => {
+        mobileMenuToggle.classList.remove('active');
+        nav.classList.remove('active');
+        body.classList.remove('menu-open');
+        mobileMenuToggle.setAttribute('aria-expanded', 'false');
+    });
+});
+
+// Close menu when clicking outside
+document.addEventListener('click', function(event) {
+    const isClickInsideNav = nav.contains(event.target);
+    const isClickOnToggle = mobileMenuToggle.contains(event.target);
+
+    if (!isClickInsideNav && !isClickOnToggle && nav.classList.contains('active')) {
+        mobileMenuToggle.classList.remove('active');
+        nav.classList.remove('active');
+        body.classList.remove('menu-open');
+        mobileMenuToggle.setAttribute('aria-expanded', 'false');
+    }
+});
+</script>
 </body>
 </html>
