--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
             </ul>
 
             <div class="footer-email">
-                <a href="/cdn-cgi/l/email-protection#0c65626a634c60696d6a757c636822636269"><span class="__cf_email__" data-cfemail="e78e898188a78b8286819e978883c9888982">[email&#160;protected]</span></a>
+                <a href="mailto:info@leafypod.com">info@leafypod.com</a>
             </div>
         </div>
 
         <div class="footer-copyright">
             <p>
-       © 2024 LeafyPod. Усі права захищені.
+                © 2024 LeafyPod. Усі права захищені.
             </p>
         </div>
     </div>
